# Tailr

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: pull-request.yml
src/tailr/: __init__.py  analyzer.py  providers.py  report.py
src/tailr/cli/: __init__.py  fit.py  main.py
tests/: __init__.py  conftest.py  test_analyzer.py  test_report.py
